--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,525 @@
-h1 {
-    color: red;
+:root {
+      --light-hue: 260deg;
+      --light-saturation: 100%;
+      --light-power: 80%;
+      
+      /* Commend this to disable auto color switch */
+      /* -webkit-animation: color 20s linear infinite;
+                  animation: color 20s linear infinite; */
+}
+
+body { 
+    background-color: white;
+}
+
+.dark-background {
+    background-color: black !important;
+    fill: white !important;
+
+}
+.light-background::after {
+    background-color: white !important;
+
+}
+.dark-text {
+    color: black !important;
+
+}
+    
+.btns {
+    width: 70%;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.btn {
+    font-family: sans-serif;
+    border: none;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin: 4px 2px;
+    border-radius: 35px;
+    width: 160px
+}
+
+.btn:hover {
+    cursor: pointer;
+}
+
+.mode {
+    background-color: #262628;
+}
+.reset {
+    background-color: #d91717;
+    height: 60px;
+}
+.increase {
+    background-color: #00D86D;
+    color: black;
+}
+
+.selected {
+    border: 2px solid #00D86D;
+    border-radius: 15px;
+}
+
+
+/* Watch */
+.Watch {
+    --dimmer: clamp(10%, var(--light-power), 40%);
+    --light: var(--light-hue) calc(var(--light-saturation) - 40%) calc(var(--light-power) + 35%); 
+    --light-dimmed: var(--light-hue) calc(var(--light-saturation) - 90%) var(--dimmer); 
+    --light-dark: var(--light-hue) var(--light-saturation) calc(var(--light-power) / 10); 
+    
+    filter: drop-shadow(0 10px 50px hsla(0deg, 0%, 0%, 0.6));
+}
+
+
+/* Strap */
+.Strap {
+    position: relative;
+    box-shadow: inset 0 10vmax 2vmax -10vmax hsl(var(--light-hue) 50% 0% / 15%);
+    background: 
+        linear-gradient(
+        to bottom,
+        hsla(0deg, 0%, 100%, 0.08),
+        hsl(var(--light) / 15%)
+        ),
+        hsl(var(--light-dark));
+    height: 16vmax;
+    width: 70%;
+    margin: 0 auto;
+    z-index: -2;
+    border-radius: 50% 50% 0% 0% / 30% 30% 0 0 
+    
+    /* Reflect stripe */
+}
+.Strap[reflect="true"] {
+        transform: scaleY(-1);
+    }
+.Strap {
+    
+    
+    /* All straps */
+}
+.Strap::before,
+    .Strap::after {
+        display: block;
+        background: inherit;
+        background-size: 100% 200%;
+        background-position: 0 100%;
+        position: absolute;
+        bottom: 0.3vmax;
+        width: 12vh;
+        height: 9vmax;
+        z-index: -1;
+        transform: translateY(5px);
+        -webkit-mask-size: 100% 100%;
+                    mask-size: 100% 100%;
+        -webkit-mask-position: 0 24px;
+                    mask-position: 0 24px;
+        -webkit-mask-repeat: no-repeat;
+                    mask-repeat: no-repeat;
+    }
+.Strap {
+    
+    /* Top strap */
+}
+.Strap::before {
+        right: 99.5%;
+        -webkit-mask-image: radial-gradient(
+        ellipse farthest-corner at left top,
+        transparent 70%,
+        black 70.5%
+        );
+                    mask-image: radial-gradient(
+        ellipse farthest-corner at left top,
+        transparent 70%,
+        black 70.5%
+        );
+    }
+.Strap {  
+    
+    /* Bottom strap */
+}
+.Strap::after {
+        left: 99.5%;
+        -webkit-mask-image: radial-gradient(
+        ellipse farthest-corner at right top,
+        transparent 70%,
+        black 70.5%
+        );
+                    mask-image: radial-gradient(
+        ellipse farthest-corner at right top,
+        transparent 70%,
+        black 70.5%
+        );
+    }
+
+.night {
+    background-color: white; z-index: 1; margin-top: 20px;
+    fill: black;
+}
+
+/* Screen */
+.Screen { 
+    --sub-reflection: var(--light-hue) calc(var(--light-saturation) / 5) 60%;
+    --screen-color: hsl(var(--light-hue) clamp(0%, var(--light-saturation), 40%) 2%);
+    
+    position: relative;
+    background-color: var(--screen-color);
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    width: 38vmax;
+    height: 46vmax;
+    border: 2px solid #000;
+    border-radius: 21% 21% 21% 21% / 20% 20% 20% 20%;
+    background-position: center center;
+    background-size: 200%;  
+    box-shadow:
+        25px 0 10px -20px hsl(var(--light) / 60%),
+        -25px 0 10px -20px hsl(var(--light) / 60%),
+        0 20px 10px -20px hsl(var(--light) / 60%),
+        0 -20px 10px -20px hsl(var(--light) / 60%),
+        inset 0 125px 3px -125px white,
+        inset 0 -125px 3px -125px white,
+        inset 125px 0 3px -125px white,
+        inset -125px 0 3px -125px white,
+        inset 0 50px 5px -50px hsl(var(--light)),
+        inset 0 -50px 5px -50px hsl(var(--light)),
+        inset 50px 0 5px -50px hsl(var(--light)),
+        inset -50px 0 5px -50px hsl(var(--light)),
+        inset 0 50px 15px -50px hsl(var(--light)),
+        inset 0 -50px 15px -50px hsl(var(--light)),
+        inset 50px 0 15px -50px hsl(var(--light)),
+        inset -50px 0 15px -50px hsl(var(--light));
+    background-image: repeating-conic-gradient(
+        hsl(var(--sub-reflection)),
+        hsl(var(--sub-reflection) / 7%) 10%,
+        hsl(var(--sub-reflection) / 7%) 14%,
+        hsl(var(--sub-reflection)) 19%,
+        hsl(var(--sub-reflection)) 27%,
+        hsl(var(--sub-reflection) / 7%) 25%
+    )
+    
+    /* External frame */
+}
+.Screen::before {
+        position: absolute;
+        box-shadow:
+        inset 0 0.3vmax 0.7vmax -0.4vmax hsl(0deg, 0%, 0%),
+        inset 0 -0.3vmax 0.7vmax -0.4vmax hsl(0deg, 0%, 0%),
+        inset 0 0 0.7vmax 0.6vmax hsl(var(--light-dark));
+        left: -5%;
+        right: -5%;
+        top: -4%;
+        bottom: -4%;
+        z-index: -1;
+        border-radius: 23% 23% 23% 23% / 22% 22% 22% 22%;
+        background: 
+        repeating-conic-gradient(
+            transparent 0%,
+            hsla(0deg, 0%, 0%, 0.6) 10%,
+            hsla(0deg, 0%, 0%, 0.6) 14%,
+            transparent 19%,
+            transparent 26%,
+            hsla(0deg, 0%, 0%, 0.6) 25%
+        ),
+        hsl(var(--light-dimmed));
+    }
+.Screen {
+    
+    /* Screen mask */
+}
+.Screen::after {
+        position: absolute;
+        top: 7%;
+        bottom: 2%;
+        left: 5%;
+        right: 5%;
+        border-radius: 15% 15% 23% 23%;
+        background: black;
+        filter: blur(1px);
+    }
+
+
+/* Digital Crown */
+.Crown {
+    position: absolute;
+    top: 8vmax;
+    left: 103%;
+    width: 2.8vmax;
+    height: 9vmax;
+    border-radius: 20% 20% 20% 20% / 30% 30% 30% 30%;
+    box-shadow:
+        -0.5vmax 0 0.3vmax -0.1vmax black,
+        -1vmax 0 1vmax -0.2vmax hsla(0deg, 0%, 0%, 0.6),
+        -0.5vmax 0 0.5vmax -1vmax hsl(var(--light-dark)),
+        inset 1px 0 6px 2px hsl(var(--light) / 10%),
+        inset 2px 0 6px 5px hsla(0deg, 0%, 0%, 0.8),
+        inset -2px 0 2px hsl(var(--light-dark) / 70%);
+    background:
+        linear-gradient(
+        to right,
+        hsl(var(--light-dark) / 50%) 10%,
+        transparent 40%, transparent 70%,
+        hsl(var(--light-dimmed) / 60%) 90%
+        ),
+        repeating-linear-gradient(
+        transparent 2%, transparent 5%,
+        hsl(var(--light-dark) / 50%) 5.1%, hsl(var(--light-dark)/50%) 9%,
+        hsl(var(--light)) 9.1%, hsl(var(--light)) 9.5%,
+        transparent 9.6%
+        ),
+        linear-gradient(
+        to bottom,
+        hsl(var(--light)),
+        hsl(var(--light) / 30%),
+        hsl(var(--light) / 10%),
+        hsl(var(--light-dark))
+        ),
+        hsl(var(--light-dimmed))
+    
+    /* Crown reflection */
+}
+.Crown::before {
+        position: absolute;
+        top: 50%;
+        left: -55%;
+        transform: translateY(-50%);
+        width: 20%;
+        height: 70%;
+        border-radius: 100% 0% 0% 100% / 50% 0% 0% 50%;
+        filter: blur(0.15vw);
+        opacity: 0.7;
+        box-shadow: inset -2px 0 0 1px hsl(var(--light-dark));
+        background-color: hsl(0deg, 0%, 0%);
+    }
+
+
+/* Home button */
+.Button {
+    width: 0.5vw;
+    height: 35%;
+    position: absolute;
+    left: calc(100% + 5%);
+    transform: translateX(-100%);
+    bottom: 20%;
+    border-radius: 100% 0% 0% 100% / 50% 50% 50% 50%;
+    box-shadow:
+        inset -0.8vmax 0 0 -0.5vmax hsl(var(--light-dark) / 70%),
+        -0.1vmax 0 0 0.1vmax hsl(var(--light-dark))
+    ;
+    background-image: linear-gradient(
+        to bottom,
+        hsl(var(--light-dimmed)) 5%,
+        hsl(var(--light-dark)) 10%, hsl(var(--light-dark)) 15%,
+        hsl(var(--light) / 60%) 20%, hsl(var(--light)/60%) 70%,
+        hsl(var(--light-dark)) 85%, hsl(var(--light-dark)) 90%,
+        hsl(var(--light-dimmed))
+    );
+}
+
+
+/* Clock */
+.Clock {
+    width: 28vmax;
+    height: 28vmax;
+    position: relative;
+    z-index: 1;
+    box-sizing: border-box;
+}
+
+
+/* Clock hands */
+.Hand {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 100%;
+    padding: 0.5vmax;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    transform-origin: 50% 50%;
+    -webkit-animation: rotation 10s linear infinite;
+                animation: rotation 10s linear infinite;
+}
+
+
+.Clock {
+    margin: 0 auto;
+    height: 20vh;
+    color: white;
+    font-size: 7vh;
+    font-family: sans-serif;
+    line-height: 20.4vh;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    /*background: green;*/
+    overflow: hidden;
+}
+
+
+.Clock::before, .Clock::after {
+    content: '';
+    width: 7ch;
+    height: 3vh;
+    position: absolute;
+    z-index: 2;
+}
+
+.Clock::after {
+    bottom: 0;
+}
+
+.Clock > div {
+    display: flex;
+}
+
+.tick {
+    line-height: 19vh;
+}
+
+.tick-hidden {
+    opacity: 0;
+}
+
+.move {
+    -webkit-animation: move linear 1s infinite;
+                animation: move linear 1s infinite;
+}
+
+@-webkit-keyframes move {
+    from {
+        transform: translateY(0vh);
+    }
+    to {
+        transform: translateY(-20vh);
+    }
+}
+
+@keyframes move {
+    from {
+        transform: translateY(0vh);
+    }
+    to {
+        transform: translateY(-20vh);
+    }
+}
+
+
+html {
+    height: 100%;
+    width: 100%;
+    /* background: hsl(var(--light-hue) var(--light-saturation) var(--light-power)); */
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+body {
+    min-height: 100%;
+    min-width: 100%;
+    box-sizing: border-box;
+    display: grid;
+    margin: 0;
+    align-content: center;
+    justify-content: center;
+    transform: scale(0.8);
+}
+
+input {
+    margin-bottom: 1rem
+}
+
+input:last-of-type {
+        margin-bottom: 4rem;
+    }
+
+
+@-webkit-keyframes color {
+    0% {
+        --light-hue: 260deg;
+        --light-saturation: 100%;
+        --light-power: 80%;
+    }
+    20% {
+        --light-hue: 360deg;
+        --light-saturation: 100%;
+        --light-power: 50%;
+    }
+    40% {
+        --light-hue: 160deg;
+        --light-saturation: 100%;
+        --light-power: 80%;
+    }
+    60% {
+        --light-hue: 160deg;
+        --light-saturation: 0%;
+        --light-power: 0%;
+    }
+    80% {
+        --light-hue: 260deg;
+        --light-saturation: 100%;
+        --light-power: 80%;
+    }
+    100% {
+        --light-hue: 200deg;
+        --light-saturation: 0%;
+        --light-power: 100%;
+    }
+}
+
+
+@keyframes color {
+    0% {
+        --light-hue: 260deg;
+        --light-saturation: 100%;
+        --light-power: 80%;
+    }
+    20% {
+        --light-hue: 360deg;
+        --light-saturation: 100%;
+        --light-power: 50%;
+    }
+    40% {
+        --light-hue: 160deg;
+        --light-saturation: 100%;
+        --light-power: 80%;
+    }
+    60% {
+        --light-hue: 160deg;
+        --light-saturation: 0%;
+        --light-power: 0%;
+    }
+    80% {
+        --light-hue: 260deg;
+        --light-saturation: 100%;
+        --light-power: 80%;
+    }
+    100% {
+        --light-hue: 200deg;
+        --light-saturation: 0%;
+        --light-power: 100%;
+    }
+}
+
+*::before,
+*::after {
+    content: '';
 }
